# LoFA

./: .gitignore  README.md  demo_stage1.py  demo_stage2.py  launch.py  models  pyproject.toml  requirements.txt
accelerator/: node.yaml
config/diff/: stage2.yaml
config/recon/: stage1.yaml
lofa/: dataset.py  hyper_modulator_mask.py  hyper_modulator_transformer.py  lora_utils.py  losses.py  module_utils.py  train_utils.py  utils.py
lofa/models/: attention.py  block.py  layer_scale.py  mlp.py
lofa/trainer/: diffusion_acctrainer.py  recon_acctrainer.py
src/diffsynth/models/: wan_video_vae.py
src/diffsynth/pipelines/: wan_lofa_pipeline.py
